--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,9 +1,10 @@
 repos:
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.3.2
+    rev: v0.11.6
     hooks:
       - id: ruff
         args: [--fix]
+      - id: ruff-format
 
   - repo: local
     hooks:
