--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,11 +24,12 @@ pandas = "*"
 python-pptx = "^1.0.2"
 scikit-learn = "*"
 seaborn = "*"
+scipy = "^1.15.3"
+mistune = "^3.1.3"
 
 # ------------------------
 # CLI entry point
 # ------------------------
-scipy = "^1.15.3"
 [tool.poetry.scripts]
 notebook-summarizer = "notebook_summarizer.cli:main"
 
