--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,12 +2,12 @@
 # Project metadata
 # ------------------------
 [tool.poetry]
-name = "notebook_summarizer"
+name = "jupdeck"
 version = "0.1.0"
-description = "Summarize Jupyter notebooks into client-friendly reports"
-authors = ["Your Name <you@example.com>"]
+description = "Create Audience-Ready Presentations from Jupyter Notebooks"
+authors = ["Jen Dobson <jendobson@gmail.com>"]
 readme = "README.md"
-packages = [{ include = "notebook_summarizer" }]
+packages = [{ include = "jupdeck" }]
 
 # ------------------------
 # Main runtime dependencies
@@ -33,7 +33,7 @@ mistune = "^3.1.3"
 # CLI entry point
 # ------------------------
 [tool.poetry.scripts]
-notebook-summarizer = "notebook_summarizer.cli:main"
+notebook-summarizer = "jupdeck.cli:main"
 
 # ------------------------
 # Development dependencies
