--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ mistune = "^3.1.3"
 # CLI entry point
 # ------------------------
 [tool.poetry.scripts]
-notebook-summarizer = "jupdeck.cli:main"
+jupdeck = "jupdeck.cli:main"
 
 # ------------------------
 # Development dependencies
