--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@
 # ------------------------
 [tool.poetry]
 name = "jupdeck"
-version = "0.1.0"
+version = "0.2.0"
 description = "Create Audience-Ready Presentations from Jupyter Notebooks"
 license = "Apache-2.0"
 authors = ["Jen Dobson <jendobson@gmail.com>"]
@@ -14,7 +14,7 @@ packages = [{ include = "jupdeck" }]
 # Main runtime dependencies
 # ------------------------
 [tool.poetry.dependencies]
-python = "^3.12"
+python = ">=3.10,<3.13"
 ipykernel = "*"
 jupyter_core = "^5.5.0"
 matplotlib = "*"
