--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ scikit-learn = "*"
 seaborn = "*"
 scipy = "^1.15.3"
 mistune = "^3.1.3"
-
+exceptiongroup = {version = "^1.1.3", python = "<3.11"}
 
 
 # ------------------------
